@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmHeader.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/12/10 13:49:07 $
-  Version:   $Revision: 1.215 $
+  Date:      $Date: 2004/12/10 14:35:58 $
+  Version:   $Revision: 1.216 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -1308,55 +1308,46 @@ void Header::InitializeDefaultHeader()
 
    std::string date = Util::GetCurrentDate();
    std::string time = Util::GetCurrentTime();
-   std::string uid  = Util::CreateUniqueUID();
+   std::string uid = Util::CreateUniqueUID();
+   std::string uidMedia = uid;
+   std::string uidClass = uid + ".1";
+   std::string uidInst  = uid + ".10";
+   std::string uidStudy = uid + ".100";
+   std::string uidSerie = uid + ".1000";
 
    static DICOM_DEFAULT_VALUE defaultvalue[] = {
-    { "76 ",      0x0002, 0x0000},         // MetaElementGroup Length // FIXME: how to recompute ?
-    { "1.2.840.10008.5.1.4.1.1.2", 0x0002, 0x0002},  // MediaStorageSOPInstanceUID (CT Image Storage)
-    { uid.c_str(), 0x0002, 0x0012},  // META Implementation Class UID
-    { "ISO_IR 100",0x0008, 0x0005},  // Specific Character Set
-    { "DERIVED\\SECONDARY\\OTHER\\GDCM", 0x0008, 0x0008},  // Image Type    
-    { "1.2.840.10008.5.1.4.1.1.2", 0x0008, 0x0016},  // SOP Class UID
-    { "",          0x0008, 0x0050},  // Accession Number
-    { "GDCM",      0x0008, 0x0070},  // Manufacturer
-    { "GDCM",      0x0008, 0x0080},  // Institution Name
-    { "http://www-creatis.insa-lyon.fr/Public/Gdcm/", 0x0008, 0x0081},  // Institution Address
-    { "",          0x0008, 0x0090},  // Refering Physician Name
-    { "",          0x0008, 0x1030},  // Study Description
-    { "",          0x0008, 0x1050},  // Performing Physician's Name
-    { "",          0x0008, 0x1060},  // Name of Physician(s) Reading Study
-    { "",          0x0010, 0x0040},  // Patient's Sex
-    { uid.c_str(), 0x0020, 0x000d},  // StudyInstanceUID
-    { uid.c_str(), 0x0020, 0x000e},  // SeriesInstanceUID
-    { "",          0x0020, 0x0011},   // AcquisitionNumber
-    { "1\\0\\0\\0\\1\\0", 0x0020, 0x0037},  // Image Orientation Patient
-    { "1",         0x0028, 0x0002},  // Samples per pixel 1 or 3
-    { "MONOCHROME1",0x0028, 0x0004},  // photochromatic interpretation
+    { "146 ",                      0x0002, 0x0000}, // Meta Element Group Length // FIXME: how to recompute ?
+    { "1.2.840.10008.5.1.4.1.1.2", 0x0002, 0x0002}, // Media Storage SOP Class UID (CT Image Storage)
+    { uidClass.c_str(),            0x0002, 0x0003}, // Media Storage SOP Instance UID
+    { uidClass.c_str(),            0x0002, 0x0012}, // META Implementation Class UID
+    { "GDCM",                      0x0002, 0x0016}, // Source Application Entity Title
 
-// Date and timeG
-    { date.c_str(), 0x0008, 0x0012 } ,  // Instance Creation Date
-    { time.c_str(), 0x0008, 0x0013 } ,  // Instance Creation Time
-    { date.c_str(), 0x0008, 0x0020 } ,  // Study Date
-    { date.c_str(), 0x0008, 0x0022 } ,  // Acquisition Date
-    { date.c_str(), 0x0008, 0x0023 } ,  // Content Date
-    { time.c_str(), 0x0008, 0x0030 } ,  // Study Time
-    { "CT",         0x0008, 0x0060 } ,  // Modality    
-    { "GDCM",       0x0010, 0x0010 } ,  // Patient's Name
-    { "GDCMID",     0x0010, 0x0020 } ,  // Patient ID
-    { "1",          0x0020, 0x0010 } ,  // StudyID
-    { "1",          0x0020, 0x0011 } ,  // SeriesNumber
-    { "1.0",        0x0018, 0x0050 } ,  // slice Thickness
-    { "1.0",        0x0018, 0x0088 } ,  // space between slices
-    { "1.0\\1.0",   0x0028, 0x0030 } ,  // pixelSpacing
-    { "64",         0x0028, 0x0010 } ,  // nbRows
-    { "64",         0x0028, 0x0011 } ,  // nbCols
-    { "16",         0x0028, 0x0100 } ,  // BitsAllocated 8 or 16
-    { "12",         0x0028, 0x0101 } ,  // BitsStored    8 or 12 or 16
-    { "11",         0x0028, 0x0102 } ,  // HighBit       7 or 11 or 15
-    { "0",          0x0028, 0x0103 } ,  // Pixel Representation 0(unsigned) or 1(signed)
-    { "1000.0",     0x0028, 0x1051 } ,  // Window Width
-    { "500.0",      0x0028, 0x1050 } ,  // Window Center
-    {  0, 0, 0 }
+    { date.c_str(),                0x0008, 0x0012}, // Instance Creation Date
+    { time.c_str(),                0x0008, 0x0013}, // Instance Creation Time
+    { "1.2.840.10008.5.1.4.1.1.2", 0x0008, 0x0016}, // SOP Class UID
+    { uidInst.c_str(),             0x0008, 0x0018}, // SOP Instance UID
+    { "CT",                        0x0008, 0x0060}, // Modality    
+    { "GDCM",                      0x0008, 0x0070}, // Manufacturer
+    { "GDCM",                      0x0008, 0x0080}, // Institution Name
+    { "http://www-creatis.insa-lyon.fr/Public/Gdcm", 0x0008, 0x0081},  // Institution Address
+
+    { "GDCM",                      0x0010, 0x0010}, // Patient's Name
+    { "GDCMID",                    0x0010, 0x0020}, // Patient ID
+
+    { uidStudy.c_str(),            0x0020, 0x000d}, // Study Instance UID
+    { uidSerie.c_str(),            0x0020, 0x000e}, // Series Instance UID
+    { "1",                         0x0020, 0x0010}, // StudyID
+    { "1",                         0x0020, 0x0011}, // SeriesNumber
+
+    { "1",                         0x0028, 0x0002}, // Samples per pixel 1 or 3
+    { "MONOCHROME1",               0x0028, 0x0004}, // photochromatic interpretation
+    { "0",                         0x0028, 0x0010}, // nbRows
+    { "0",                         0x0028, 0x0011}, // nbCols
+    { "8",                         0x0028, 0x0100}, // BitsAllocated 8 or 16
+    { "8",                         0x0028, 0x0101}, // BitsStored    8 or 12 or 16
+    { "7",                         0x0028, 0x0102}, // HighBit       7 or 11 or 15
+    { "0",                         0x0028, 0x0103}, // Pixel Representation 0(unsigned) or 1(signed)
+    { 0, 0, 0 }
    };
 
    // default value
